added certificates sync for 1c
