# app/OpenApi/Endpoints/CertificateDeleteEndpoint.php
@@ -1,0 +1,35 @@
+<?php
+namespace App\OpenApi\Endpoints;
+
+use OpenApi\Attributes as OA;
+
+#[OA\Post(
+    path: "/api/v1/integrations/1c/taxonomy/certificates/delete",
+    description: "Delete certificates",
+    summary: "Delete certificates by ids array",
+    security: [["bearerAuth" => []]],
+    requestBody: new OA\RequestBody(
+        ref: "#/components/requestBodies/C1EntityDeleteRequestBody"
+    ),
+    tags: ["certificates"],
+    responses: [
+        new OA\Response(
+            response: 200,
+            description: "Successfully response",
+            content: new OA\JsonContent(
+                properties: [
+                    new OA\Property(
+                        property: "deleted",
+                        type: "integer",
+                        example: 3,
+                    ),
+                ]
+            )
+        ),
+        new OA\Response(
+            response: 401,
+            description: "Unauthenticated"
+        )
+    ]
+)]
+class CertificateDeleteEndpoint {}
